framec_tests/language_specific/java/v3_facade_smoke/negative/transition_invalid_state_ident.frm
@target java

system S {
    machine:
        $A {
            e() {
                __frame_transition('1Bad');
            }
        }
}

